--- a/css/main.css
+++ b/css/main.css
@@ -15,9 +15,12 @@
   --accent: var(--purple);
 }
 
-body{
+html, body{
+  min-height: 100vh;
   font-family: 'DM Sans',sans-serif;
   color: var(--text-color);
+  display: flex;
+  flex-direction: column;
 }
 
 .container{
@@ -33,6 +36,9 @@ body{
   color: var(--header-text); 
   padding: 20px;
   border-bottom: 1px solid var(--dark-border);
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 }
 
 .nav-row{
@@ -60,7 +66,7 @@ body{
   font-size: 16px;
   font-weight: 500;
   font-family: 'Poppins',sans-serif;
-
+  
 }
 
 .nav-list__link {
@@ -188,11 +194,48 @@ body{
   color: var(--dark-border);
 }
 
+/* Project details */
+.project-details {
+  margin: o auto;
+  max-width: 865px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.title-1 {
+}
+.project-details__img {
+  max-width: 100%;
+  margin-bottom: 40px;
+}
+.project-details__description {
+}
+
+/* Content list */
+.title-2{
+  font-weight: 700;
+  font-size: 30px;
+}
+
+.content-list {
+  margin: 0 auto;
+  max-width: 570px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 40px;
+  text-align: center;
+}
+.content-list__item {
+
+}
+
 /* Footer */
 .footer {
   background-color: var(--dark-bg);
   padding: 60px 0 50px;
   color: var(--header-text);
+  margin-top: auto;
 }
 
 .footer__wrapper{
@@ -206,3 +249,4 @@ body{
   align-items: center;
   column-gap: 30px;
 }
+
