--- a/css/main.css
+++ b/css/main.css
@@ -7,12 +7,23 @@
   --black-border: #26292D; 
   --white: #fff;
   --purple: #5C62EC; 
-
-  --text-color:var(--black);
+  
   --dark-bg: var(--black);
   --dark-border: var(--black-border);
   --header-text: var(--white);
   --accent: var(--purple);
+  /*Light mode*/
+  
+  --page-bg: var(--white);
+  --text-color: var(--black);
+  --title-1: var(--accent);
+}
+
+.dark{
+  /* Dark mode */
+  --page-bg: #252526;
+  --text-color: var(--white);
+  --title-1: var(--white);
 }
 
 html, body{
@@ -21,6 +32,7 @@ html, body{
   color: var(--text-color);
   display: flex;
   flex-direction: column;
+  background-color: var(--page-bg);
 }
 
 .container{
@@ -156,7 +168,7 @@ html, body{
 /* Main */
 
 .section {
-  padding: 70px 0;
+  padding: 70px 0; 
 }
 
 .title-1 {
@@ -164,7 +176,7 @@ html, body{
   font-size: 60px;
   font-weight: 700;
   line-height: 1.3;
-  color: var(--accent);
+  color: var(--title-1);
   text-align: center;
 }
 
@@ -202,8 +214,7 @@ html, body{
   flex-direction: column;
   align-items: center;
 }
-.title-1 {
-}
+
 .project-details__img {
   max-width: 100%;
   margin-bottom: 40px;
@@ -249,6 +260,40 @@ html, body{
   align-items: center;
   column-gap: 30px;
 }
+
+/* Dark mode btn */
+
+.dark-mode-btn {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  height: 26px;
+  width: 51px;
+  background: #272727;
+  border-radius: 50px;
+  padding: 5px;
+}
+
+.dark-mode-btn::before{
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: #fff;
+  transition: left 0.2s ease-in;
+}
+
+.dark-mode-btn--active::before{
+  left: 26px;
+}
+
+.dark-mode-btn__icon {
+  position:relative;
+}
+
 
 @media (max-width: 620px) {
   .header{
